force-app/main/default/objects/Lease_Payment__c/fields/Apartment__c.field-meta.xml
<CustomField>
    <fullName>Apartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apartment</label>
    <referenceTo>Apartment__c</referenceTo>
    <relationshipLabel>Lease Payments</relationshipLabel>
    <relationshipName>Lease_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>