force-app/main/default/objects/Lease_Payment__c/fields/Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Due__c</fullName>
    <label>Date Due</label>
    <required>true</required>
    <type>Date</type>
</CustomField>