force-app/main/default/objects/Lease_Payment__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <formula>AND(
  NOT(ISBLANK(Date_Paid__c)),
  NOT(ISBLANK(Date_Due__c)),
  Date_Paid__c &gt; Date_Due__c,
  Date_Paid__c &lt; TODAY(),
  Date_Due__c &lt; TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due</label>
    <type>Checkbox</type>
</CustomField>