force-app/main/default/objects/Lease_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Apartment__c</columns>
    <columns>NAME</columns>
    <columns>Rent_Amount__c</columns>
    <columns>Account__c</columns>
    <columns>Date_Due__c</columns>
    <columns>Date_Paid__c</columns>
    <columns>Past_Due__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Adriana Hernandez</value>
    </filters>
    <label>All</label>
</ListView>