force-app/main/default/objects/Lease_Payment__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Apartment__c</columns>
    <columns>Rent_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>